challenge 3-3 page course description using Router params

--- a/desafios/challenge/3-1/view/courses.njk
+++ b/desafios/challenge/3-1/view/courses.njk
@@ -33,7 +33,7 @@
     </div>
 {% endblock %}
 
-{% block modal %}
+{# {% block modal %}
      <!-- MODAL HTML -->
     <div class="overlay">
         <div class="modal">
@@ -50,7 +50,7 @@
             </div>
         </div>
     </div>
-{% endblock modal %}
+{% endblock modal %} #}
 
 {% block scripts %}
     <script src="scripts.js"></script>
