--- a/desafios/challenge/3-1/view/layout.njk
+++ b/desafios/challenge/3-1/view/layout.njk
@@ -41,8 +41,8 @@
         </div>
     </footer>
 
-    {% block modal %}
-    {% endblock modal %}
+    {# {% block modal %}
+    {% endblock modal %} #}
 
     {% block scripts %}
     {% endblock %}
