--- a/desafios/challenge/3-1/public/styles.css
+++ b/desafios/challenge/3-1/public/styles.css
@@ -352,3 +352,33 @@ section.notfound{
     width: 100%;
     height: 94%
 }
+
+/* === PAGE DESCRIPTION === */
+section.description .img-container{
+    width: 500px;
+}
+
+section.description img{
+    background: none;
+    border-radius: 0;
+    border: none;
+    width: 100%;
+}
+
+section.description h1{
+    color: white;
+    text-transform: uppercase;
+}
+
+section.description p{
+    color: var(--color-sencodary);
+    font-size: 3.2rem;
+    line-height: 4.2rem;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+section.description p a{
+    text-decoration: none;
+    color: var(--color-sencodary);
+}
