update images source

--- a/desafios/challenge/view/layout.njk
+++ b/desafios/challenge/view/layout.njk
@@ -13,7 +13,7 @@
             <div class="container">
                 <div class="container-logo">
                     <a href="/">
-                        <img src="https://rocketseat.com.br/static/images/gostack/logo-rocketseat.svg" alt="rocketseat">
+                        <img src="/image/rocketseat-logo.png" alt="rocketseat">
                     </a>
                 </div>
                 <nav class="contact-menu">
